# fictional-octo-winner

./: .gitignore  ARCHITECTURE.md  BRANCH_CONSOLIDATION_SUMMARY.md  FIXES_SUMMARY.md  NEXT_STEPS.md  PROJECT_ANALYSIS_REPORT.md  QUICKSTART.md  RAG_OPTIMIZATION.md  README.md  TODO.md  UPDATER_SETUP.md  create-icon.sh  generate-icons.sh  package.json
.github/workflows/: ci.yml
api-doc/Anthropic/: Claude_Api_1.txt  Claude_Api_2.txt  Claude_Api_3.txt  Claude_Api_4.txt  Claude_Api_5.txt  Claude_Api_6.txt  Claude_Api_7.txt  Claude_Api_8.txt  Claude_Api_9.txt  Claude_Api_Index.txt
api-doc/Deepseek api/: Deepseek_API_2.txt  Deepseek_API_3.txt  api-reference.md  error-codes.md  function-calling.md  getting-started.md  json-mode.md  models-and-pricing.md  reasoning-model.md
api-doc/Deepseek api/llmfriendly/: Deepseek_API_1.txt  (+1 more)
api-doc/Gemini/: Gemini_Api_1.txt  Gemini_Api_10.txt  Gemini_Api_11.txt  Gemini_Api_2.txt  Gemini_Api_3.txt  Gemini_Api_4.txt  Gemini_Api_5.txt  Gemini_Api_6.txt  Gemini_Api_7.txt  Gemini_Api_8.txt  Gemini_Api_9.txt  Gemini_Api_Index.txt
frontend/: .eslintignore  .eslintrc.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: .gitkeep  README.md  icon.icns
src-tauri/src/: main.rs  validation.rs
src-tauri/src/commands/: canvas_commands.rs  chat_commands.rs  config_commands.rs  conversation_commands.rs  mod.rs  rag_commands.rs
src-tauri/src/config/: mod.rs  store.rs
src-tauri/src/llm_providers/: claude.rs  deepseek.rs  gemini.rs  mod.rs  traits.rs
src-tauri/src/rag/: chunking.rs  database.rs  embeddings.rs  mod.rs  search.rs
src-tauri/src/security/: encryption.rs  keychain.rs  mod.rs
(+32 files in other folders)
