[package]
name = "llm-workbench"
version = "0.1.0"
description = "Desktop LLM Workbench"
authors = ["LLM Workbench Team"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
# Tauri core
tauri = { version = "1.5", features = ["dialog-open", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# HTTP client for LLM APIs
reqwest = { version = "0.11", features = ["json", "stream"] }
reqwest-eventsource = "0.5"  # For SSE streaming

# Encryption & security
chacha20poly1305 = "0.10"
rand = "0.8"
keyring = "2.3"
base64 = "0.21"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "migrate"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
bincode = "1.3"  # For embedding serialization

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "s"   # Optimize for binary size
strip = true      # Remove debug symbols
